# AI_Social_Media_Agent

./: .gitignore  AI_Social_Media_Agent_Dev_Plan.md  README.md
backend/: .env.example  README.md  pyproject.toml  schema.sql  test_vision.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: brand.py  copy.py  vision.py
backend/app/core/: config.py  prompts.py
backend/app/services/: document_processor.py  llm_service.py  rag_service.py  search_service.py  workflow_service.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/brand/: page.tsx
